# shapeshifter

./: Cargo.toml  NOTES.txt  PLAN.txt  README  index.html
assets/meshes/: 002_simplicity_square.pts  002_simplicity_square_90.pts  003_simplicity_square_oblique.pts  a.pts  (+76 more)
crates/shapeshifter_level_maker/: Cargo.toml
crates/shapeshifter_level_maker/assets/meshes/my_mesh0/: my_mesh0.points
crates/shapeshifter_level_maker/assets/meshes/my_mesh4/: my_mesh0.points
crates/shapeshifter_level_maker/assets/shaders/: cut.wgsl
crates/shapeshifter_level_maker/examples/: bah.rs
crates/shapeshifter_level_maker/src/: cut.rs  input.rs  lib.rs  load.rs  load_poly_wasm.rs  material.rs  mod.rs  poly.rs  save.rs  target.rs  util.rs  view.rs
crates/shapeshifter_level_maker/src/polygons/: 002_simplicity_square_90.pts  003_simplicity_square_oblique.pts  004_simplicity_rectangle.pts  005_simplicity_cactus.pts  a.pts  b.pts  beaver1.pts  bird_box1.pts  bird_colibri.pts  butterfly1.pts  butterfly2.pts  c.pts  calamary1.pts  cat1.pts  cat2.pts  cat3.pts  crab1.pts  duck1.pts  e.pts  eagle1.pts  ee.pts  elephant1.pts  f.pts  fish2.pts  fish_charles.pts  flowerpot.pts  fox1.pts  gege3.pts  gege_castors.pts  gege_turtle.pts  giraffe1.pts  h.pts  heart.pts  hh.pts  horse1.pts  horse_sail1.pts  house_arrow.pts  i  i.pts  lion1.pts  (+23 more)
examples/: gen_all_include_str.rs  import_pts.rs
src/: NOTES.txt  PLAN.txt  cam.rs  cut.rs  design.rs  game.rs  game_spawn.rs  input.rs  io.rs  levels.rs  load.rs  main.rs  material.rs  menu.rs  poly.rs  poly_list.txt  save.rs  spawn.rs  splash.rs  target.rs  util.rs  view.rs
wasm/: index.html  settings.json
(+84 files in other folders)
