[package]
name = "shapeshifter_level_maker"
version = "0.1.0"
edition = "2021"
# workspace = "~/Documents/rust/shapeshifter/crates/shapeshifter_level_maker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
bevy = "0.8"
lyon = "1.0"
rand = "0.8"
bevy-inspector-egui = "0.12"
serde = { version = "1", features = ["derive"] }
obj-exporter = "0.2.0"
bevy_obj = "0.8"
serde_json = "1.0.59"
bevy_easings = "0.8"
rfd = "0.10"

[[example]]
name = "bah"
path = "examples/bah.rs"

[features]
default = ["render", "sprite", "ui"]
"render" = ["bevy/bevy_render"]
"sprite" = ["bevy/bevy_sprite"]
"ui" = ["bevy/bevy_ui"]
"examples" = ["ui", "sprite", "render", "bevy/render", "bevy/bevy_winit", "bevy/x11", "bevy/bevy_asset"]

# bevy = { version = "0.6.1", default-features = true, features = [  "render", "x11", "filesystem_watcher"] }

[lib]
name = "shapeshifter_level_maker"
path = "src/lib.rs"

# [[bin]]
# name = "lib"
# path = "src/lib.rs"